# isitvegan-web

./: .env.default  .gitignore  .mailmap  .travis.yml  Caddyfile  Cargo.toml  Justfile  Vagrantfile  coverage.sh  index.html  items.toml  license.txt  package.json  postcss.config.cjs  readme.md  rollup.config.js  rust-toolchain  tsconfig.json
.github/workflows/: build.yml  ci.yml  deploy.yml
ci/: install_grcov.sh  test_client.sh  test_server.sh
client/: .babelrc  .editorconfig  .gitignore  index.html  package-lock.json  package.json  postcss.config.js  rollup.config.js  tsconfig.json
client/less/: main.less
client/less/components/: links-list.less  page-footer.less  page-layout.less  search-bar.less  search-result-item-status.less  search-result-item.less  search-result-item.scss  search-results.less  search-results.scss  search-scope-bar.less
client/less/core/: normalize.less  reset.less  typography.less
client/scripts/: build-css.py  build-items-json.py  install.py
client/src/: main.tsx  search-api-proxy.ts  search-api-return-types.ts  search-scope.tsx  searchApiProxies.ts  searchApiProxy.ts  searchApiReturnTypes.ts
client/src/components/: search-input.tsx  search-result-item.tsx  search-results.tsx  search-scope-bar.tsx
fonts/: inter.css
item-patches/: e_numbers.toml
items/: automatically_imported_booze.toml  automatically_imported_items.toml  ingredients.toml  materials.toml
items/drinks/: beers.toml  booze.toml  dairy_and_alternatives.toml  energy_drinks.toml  milk.toml
items/e_numbers/: colorants.toml
items/imported/: e_numbers.toml  readme.md
less/components/: page-layout.less  search-result-item.less
less/core/: normalize.less
scripts/: .gitignore  build-items-json.py  install.py  setup_vm.sh
scripts/build_items/: build-items-json.py  pyproject.toml
scripts/import_booze/: .gitignore  import_booze.py  pyproject.toml
scripts/import_e_numbers/: import_e_numbers.py  pyproject.toml
src/: config_loader.rs  constant.rs  data.rs  item_loader.rs  item_mapper.rs  item_packer.rs  items_packer.rs  lib.rs  main.rs  model.rs  search-api-proxy.ts  search-api-return-types.ts  search_engine.rs  server.rs
src/components/: search-results.tsx
