[package]
name = "is-it-vegan"
version = "0.1.0"
authors = ["Jan Nils Ferner <jn_ferner@hotmail.de>"]
edition = "2018"

[dependencies]
url = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
# Git dependency until https://github.com/elastic-rs/elastic/issues/346 is released
elastic = { git = "https://github.com/elastic-rs/elastic" }
serde_json = "1"
rocket = "0.4.2"
rocket_contrib = { version = "0.4.2", features = ["json"] }
toml = "0.5.5"
dotenv = "0.15.0"
walkdir = "2"
slug = "0.1"
chrono = "0.4.9"
